manifests/debug-authorization-policy-allow-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: debug-kiali-allow-all
  namespace: kiali
spec:
  selector:
    matchLabels:
      app: kiali
  rules:
  - {}
