manifests/debug-deployment-headlamp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
    meta.helm.sh/release-name: headlamp-headlamp
    meta.helm.sh/release-namespace: headlamp
  creationTimestamp: "2026-03-13T08:14:55Z"
  generation: 5
  labels:
    app.kubernetes.io/instance: headlamp-headlamp
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: headlamp
    app.kubernetes.io/version: 0.40.0
    helm.sh/chart: upstream-0.40.0
    helm.toolkit.fluxcd.io/name: headlamp
    helm.toolkit.fluxcd.io/namespace: bigbang
  name: headlamp-headlamp
  namespace: headlamp
  resourceVersion: "59059"
  uid: 5d66c517-fbc7-4822-a807-c26c6505b1ae
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: headlamp-headlamp
      app.kubernetes.io/name: headlamp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: headlamp-headlamp
        app.kubernetes.io/name: headlamp
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - -in-cluster
        - -in-cluster-context-name=main
        - -plugins-dir=/headlamp/plugins
        - -oidc-client-id=$(OIDC_CLIENT_ID)
        - -oidc-idp-issuer-url=$(OIDC_ISSUER_URL)
        - -oidc-scopes=$(OIDC_SCOPES)
        - -oidc-use-pkce=$(OIDC_USE_PKCE)
        - -oidc-skip-tls-verify
        - -log-level=debug
        env:
        - name: OIDC_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: clientID
              name: oidc
        - name: OIDC_ISSUER_URL
          valueFrom:
            secretKeyRef:
              key: issuerURL
              name: oidc
        - name: OIDC_SCOPES
          valueFrom:
            secretKeyRef:
              key: scopes
              name: oidc
        - name: OIDC_USE_PKCE
          valueFrom:
            secretKeyRef:
              key: usePKCE
              name: oidc
        - name: HEADLAMP_CONFIG_LOG_LEVEL
          value: debug
        image: registry1.dso.mil/ironbank/opensource/headlamp-k8s/headlamp:v0.40.0
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: upstream
        ports:
        - containerPort: 4466
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext:
          capabilities:
            drop:
            - ALL
          privileged: false
          runAsGroup: 101
          runAsNonRoot: true
          runAsUser: 100
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      hostUsers: true
      imagePullSecrets:
      - name: private-registry
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: headlamp-headlamp
      serviceAccountName: headlamp-headlamp
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-03-13T08:15:11Z"
    lastUpdateTime: "2026-03-13T08:15:11Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-03-13T08:14:55Z"
    lastUpdateTime: "2026-03-13T09:06:08Z"
    message: ReplicaSet "headlamp-headlamp-66ccfdc5b4" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 5
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
