manifests/netshoot_current_2.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    istio.io/rev: default
    kubectl.kubernetes.io/default-container: netshoot
    kubectl.kubernetes.io/default-logs-container: netshoot
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"labels":{"app.kubernetes.io/name":"netshoot"},"name":"netshoot","namespace":"monitoring"},"spec":{"containers":[{"args":["bash","-c","tail -f /dev/null"],"image":"nicolaka/netshoot:v0.15","imagePullPolicy":"IfNotPresent","name":"netshoot","resources":{},"securityContext":{"capabilities":{"drop":["ALL"]}}}],"imagePullSecrets":[{"name":"private-registry"}],"serviceAccount":"monitoring-monitoring-kube-prometheus","serviceAccountNam [...]
    prometheus.io/path: /stats/prometheus
    prometheus.io/port: "15020"
    prometheus.io/scrape: "true"
    sidecar.istio.io/status: '{"initContainers":["istio-init","istio-proxy"[],"containers":null,"volumes":["workload-socket","credential-socket","workload-certs","istio-envoy","istio-data","istio-podinfo","istio-token","istiod-ca-cert","istio-ca-crl"[],"imagePullSecrets":["private-registry"],"revision":"default"}'
  creationTimestamp: "2026-03-04T10:17:23Z"
  generation: 1
  labels:
    app.kubernetes.io/name: netshoot
    security.istio.io/tlsMode: istio
    service.istio.io/canonical-name: netshoot
    service.istio.io/canonical-revision: latest
  name: netshoot
  namespace: monitoring
  resourceVersion: "328727"
  uid: ad58e989-6c26-4ac2-8aec-870b6670ce96
spec:
  containers:
  - args:
    - bash
    - -c
    - tail -f /dev/null
    image: nicolaka/netshoot:v0.15
    imagePullPolicy: IfNotPresent
    name: netshoot
    resources: {}
    securityContext:
      capabilities:
        drop:
        - ALL
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  imagePullSecrets:
  - name: private-registry
  initContainers:
  - args:
    - istio-iptables
    - -p
    - "15001"
    - -z
    - "15006"
    - -u
    - "1337"
    - -m
    - REDIRECT
    - -i
    - '*'
    - -x
    - ""
    - -b
    - '*'
    - -d
    - 15090,15021,15020
    - --log_output_level=default:info
    image: registry1.dso.mil/ironbank/opensource/istio/proxyv2:1.29.0
    imagePullPolicy: IfNotPresent
    name: istio-init
    resources:
      limits:
        cpu: "2"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 128Mi
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        add:
        - NET_ADMIN
        - NET_RAW
        drop:
        - ALL
      privileged: false
      readOnlyRootFilesystem: false
      runAsGroup: 0
      runAsNonRoot: false
      runAsUser: 0
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
  - args:
    - proxy
    - sidecar
    - --domain
    - $(POD_NAMESPACE).svc.cluster.local
    - --proxyLogLevel=warning
    - --proxyComponentLogLevel=misc:error
    - --log_output_level=default:info
    env:
    - name: PILOT_CERT_PROVIDER
      value: istiod
    - name: CA_ADDR
      value: istiod.istio-system.svc:15012
    - name: POD_NAME
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: metadata.name
    - name: POD_NAMESPACE
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: metadata.namespace
    - name: INSTANCE_IP
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: status.podIP
    - name: SERVICE_ACCOUNT
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: spec.serviceAccountName
    - name: HOST_IP
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: status.hostIP
    - name: ISTIO_CPU_LIMIT
      valueFrom:
        resourceFieldRef:
          divisor: "1"
          resource: limits.cpu
    - name: PROXY_CONFIG
      value: |
        {"tracing":{"zipkin":{"address":"tempo-tempo.tempo.svc:9411"},"sampling":10}}
    - name: ISTIO_META_POD_PORTS
      value: |-
        [
        ]
    - name: ISTIO_META_APP_CONTAINERS
      value: netshoot
    - name: GOMEMLIMIT
      valueFrom:
        resourceFieldRef:
          divisor: "1"
          resource: limits.memory
    - name: GOMAXPROCS
      valueFrom:
        resourceFieldRef:
          divisor: "1"
          resource: limits.cpu
    - name: ISTIO_META_CLUSTER_ID
      value: Kubernetes
    - name: ISTIO_META_NODE_NAME
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: spec.nodeName
    - name: ISTIO_META_INTERCEPTION_MODE
      value: REDIRECT
    - name: ISTIO_META_WORKLOAD_NAME
      value: netshoot
    - name: ISTIO_META_OWNER
      value: kubernetes://apis/v1/namespaces/monitoring/pods/netshoot
    - name: ISTIO_META_MESH_ID
      value: cluster.local
    - name: TRUST_DOMAIN
      value: cluster.local
    image: registry1.dso.mil/ironbank/opensource/istio/proxyv2:1.29.0
    imagePullPolicy: IfNotPresent
    lifecycle:
      preStop:
        exec:
          command:
          - pilot-agent
          - request
          - --debug-port=15020
          - POST
          - drain
    name: istio-proxy
    ports:
    - containerPort: 15090
      name: http-envoy-prom
      protocol: TCP
    readinessProbe:
      failureThreshold: 4
      httpGet:
        path: /healthz/ready
        port: 15021
        scheme: HTTP
      periodSeconds: 15
      successThreshold: 1
      timeoutSeconds: 3
    resources:
      limits:
        cpu: "2"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 128Mi
    restartPolicy: Always
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
      privileged: false
      readOnlyRootFilesystem: true
      runAsGroup: 1337
      runAsNonRoot: true
      runAsUser: 1337
    startupProbe:
      failureThreshold: 600
      httpGet:
        path: /healthz/ready
        port: 15021
        scheme: HTTP
      periodSeconds: 1
      successThreshold: 1
      timeoutSeconds: 3
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/workload-spiffe-uds
      name: workload-socket
    - mountPath: /var/run/secrets/credential-uds
      name: credential-socket
    - mountPath: /var/run/secrets/workload-spiffe-credentials
      name: workload-certs
    - mountPath: /var/run/secrets/istio
      name: istiod-ca-cert
    - mountPath: /var/run/secrets/istio/crl
      name: istio-ca-crl
    - mountPath: /var/lib/istio/data
      name: istio-data
    - mountPath: /etc/istio/proxy
      name: istio-envoy
    - mountPath: /var/run/secrets/tokens
      name: istio-token
    - mountPath: /etc/istio/pod
      name: istio-podinfo
  nodeName: bb1-worker2
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext:
    fsGroup: 65534
    runAsGroup: 65534
    runAsNonRoot: true
    runAsUser: 65534
  serviceAccount: monitoring-monitoring-kube-prometheus
  serviceAccountName: monitoring-monitoring-kube-prometheus
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - emptyDir: {}
    name: workload-socket
  - emptyDir: {}
    name: credential-socket
  - emptyDir: {}
    name: workload-certs
  - emptyDir:
      medium: Memory
    name: istio-envoy
  - emptyDir: {}
    name: istio-data
  - downwardAPI:
      defaultMode: 420
      items:
      - fieldRef:
          apiVersion: v1
          fieldPath: metadata.labels
        path: labels
      - fieldRef:
          apiVersion: v1
          fieldPath: metadata.annotations
        path: annotations
    name: istio-podinfo
  - name: istio-token
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          audience: istio-ca
          expirationSeconds: 43200
          path: istio-token
  - configMap:
      defaultMode: 420
      name: istio-ca-root-cert
    name: istiod-ca-cert
  - configMap:
      defaultMode: 420
      name: istio-ca-crl
      optional: true
    name: istio-ca-crl
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2026-03-04T10:17:24Z"
    observedGeneration: 1
    status: "True"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2026-03-04T10:17:26Z"
    observedGeneration: 1
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2026-03-04T10:17:27Z"
    observedGeneration: 1
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2026-03-04T10:17:27Z"
    observedGeneration: 1
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2026-03-04T10:17:23Z"
    observedGeneration: 1
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://f1ceeab044c2984cc9a7a7678638e14cc500de46185c3419189957e0128ebe67
    image: docker.io/nicolaka/netshoot:v0.15
    imageID: docker.io/nicolaka/netshoot@sha256:47b907d662d139d1e2f22bfe14f4efca1e3f1feed283572f47c970c780c03b61
    lastState: {}
    name: netshoot
    ready: true
    resources: {}
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2026-03-04T10:17:26Z"
    user:
      linux:
        gid: 65534
        supplementalGroups:
        - 65534
        uid: 65534
  hostIP: 172.18.0.4
  hostIPs:
  - ip: 172.18.0.4
  initContainerStatuses:
  - allocatedResources:
      cpu: 100m
      memory: 128Mi
    containerID: containerd://e02d648d8d8499edb7edf6bfe29433f926c96f9d35a008ff4de2bcd6b1875cd0
    image: registry1.dso.mil/ironbank/opensource/istio/proxyv2:1.29.0
    imageID: registry1.dso.mil/ironbank/opensource/istio/proxyv2@sha256:f763539198275ae6d04c8ce3998661e8c120b306732d4839e00f57a3f9973ada
    lastState: {}
    name: istio-init
    ready: true
    resources:
      limits:
        cpu: "2"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 128Mi
    restartCount: 0
    started: false
    state:
      terminated:
        containerID: containerd://e02d648d8d8499edb7edf6bfe29433f926c96f9d35a008ff4de2bcd6b1875cd0
        exitCode: 0
        finishedAt: "2026-03-04T10:17:23Z"
        reason: Completed
        startedAt: "2026-03-04T10:17:23Z"
    user:
      linux:
        gid: 0
        supplementalGroups:
        - 0
        - 65534
        uid: 0
  - allocatedResources:
      cpu: 100m
      memory: 128Mi
    containerID: containerd://63e590bace30a01aad9fe63b178cb224addac7a952f1a91375fdfe3964bc0978
    image: registry1.dso.mil/ironbank/opensource/istio/proxyv2:1.29.0
    imageID: registry1.dso.mil/ironbank/opensource/istio/proxyv2@sha256:f763539198275ae6d04c8ce3998661e8c120b306732d4839e00f57a3f9973ada
    lastState: {}
    name: istio-proxy
    ready: true
    resources:
      limits:
        cpu: "2"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 128Mi
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2026-03-04T10:17:24Z"
    user:
      linux:
        gid: 1337
        supplementalGroups:
        - 1337
        - 65534
        uid: 1337
    volumeMounts:
    - mountPath: /var/run/secrets/workload-spiffe-uds
      name: workload-socket
    - mountPath: /var/run/secrets/credential-uds
      name: credential-socket
    - mountPath: /var/run/secrets/workload-spiffe-credentials
      name: workload-certs
    - mountPath: /var/run/secrets/istio
      name: istiod-ca-cert
    - mountPath: /var/run/secrets/istio/crl
      name: istio-ca-crl
    - mountPath: /var/lib/istio/data
      name: istio-data
    - mountPath: /etc/istio/proxy
      name: istio-envoy
    - mountPath: /var/run/secrets/tokens
      name: istio-token
    - mountPath: /etc/istio/pod
      name: istio-podinfo
  observedGeneration: 1
  phase: Running
  podIP: 10.244.2.38
  podIPs:
  - ip: 10.244.2.38
  qosClass: Burstable
  startTime: "2026-03-04T10:17:23Z"
