manifests/prometheus-server.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    bigbang.dev/istioVersion: 1.29.0
    istio.io/rev: default
    kubectl.kubernetes.io/default-container: prometheus
    kubectl.kubernetes.io/default-logs-container: prometheus
    prometheus.io/path: /stats/prometheus
    prometheus.io/port: "15020"
    prometheus.io/scrape: "true"
    proxy.istio.io/config: |
      proxyMetadata:
        OUTPUT_CERTS: /etc/istio-output-certs
    sidecar.istio.io/status: '{"initContainers":["istio-init","istio-proxy"[],"containers":null,"volumes":["workload-socket","credential-socket","workload-certs","istio-envoy","istio-data","istio-podinfo","istio-token","istiod-ca-cert","istio-ca-crl"[],"imagePullSecrets":["private-registry"],"revision":"default"}'
    sidecar.istio.io/userVolumeMount: '[{"name": "istio-certs", "mountPath": "/etc/istio-output-certs"}]'
    traffic.sidecar.istio.io/includeOutboundIPRanges: ""
  creationTimestamp: "2026-03-02T09:07:52Z"
  generateName: prometheus-monitoring-monitoring-kube-prometheus-
  generation: 1
  labels:
    app: prometheus
    app.kubernetes.io/instance: monitoring-monitoring-kube-prometheus
    app.kubernetes.io/managed-by: prometheus-operator
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/version: 3.9.1
    apps.kubernetes.io/pod-index: "0"
    controller-revision-hash: prometheus-monitoring-monitoring-kube-prometheus-58cbd69bbb
    operator.prometheus.io/name: monitoring-monitoring-kube-prometheus
    operator.prometheus.io/shard: "0"
    prometheus: monitoring-monitoring-kube-prometheus
    protect: keycloak
    security.istio.io/tlsMode: istio
    service.istio.io/canonical-name: prometheus
    service.istio.io/canonical-revision: 3.9.1
    statefulset.kubernetes.io/pod-name: prometheus-monitoring-monitoring-kube-prometheus-0
  name: prometheus-monitoring-monitoring-kube-prometheus-0
  namespace: monitoring
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: StatefulSet
    name: prometheus-monitoring-monitoring-kube-prometheus
    uid: 95370237-ba47-4572-9e03-bc5929a5f6d8
  resourceVersion: "290839"
  uid: a5b42fab-f239-42ba-ab6a-ae1fa24ee939
spec:
  affinity:
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - podAffinityTerm:
          labelSelector:
            matchExpressions:
            - key: app.kubernetes.io/name
              operator: In
              values:
              - prometheus
            - key: app.kubernetes.io/instance
              operator: In
              values:
              - monitoring-monitoring-kube-prometheus
          topologyKey: kubernetes.io/hostname
        weight: 100
  automountServiceAccountToken: true
  containers:
  - args:
    - --config.file=/etc/prometheus/config_out/prometheus.env.yaml
    - --web.enable-lifecycle
    - --web.enable-remote-write-receiver
    - --web.external-url=https://prometheus.dev.bigbang.mil
    - --web.route-prefix=/
    - --storage.tsdb.retention.time=10d
    - --storage.tsdb.path=/prometheus
    - --storage.tsdb.wal-compression
    - --web.config.file=/etc/prometheus/web_config/web-config.yaml
    image: registry1.dso.mil/ironbank/opensource/prometheus/prometheus:v3.9.1
    imagePullPolicy: IfNotPresent
    livenessProbe:
      failureThreshold: 6
      httpGet:
        path: /app-health/prometheus/livez
        port: 15020
        scheme: HTTP
      periodSeconds: 5
      successThreshold: 1
      timeoutSeconds: 3
    name: prometheus
    ports:
    - containerPort: 9090
      name: http-web
      protocol: TCP
    readinessProbe:
      failureThreshold: 3
      httpGet:
        path: /app-health/prometheus/readyz
        port: 15020
        scheme: HTTP
      periodSeconds: 5
      successThreshold: 1
      timeoutSeconds: 3
    resources:
      limits:
        cpu: 300m
        memory: 5Gi
      requests:
        cpu: 300m
        memory: 5Gi
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
      readOnlyRootFilesystem: true
    startupProbe:
      failureThreshold: 60
      httpGet:
        path: /app-health/prometheus/startupz
        port: 15020
        scheme: HTTP
      periodSeconds: 15
      successThreshold: 1
      timeoutSeconds: 3
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: FallbackToLogsOnError
    volumeMounts:
    - mountPath: /etc/prometheus/config_out
      name: config-out
      readOnly: true
    - mountPath: /etc/prometheus/certs
      name: tls-assets
      readOnly: true
    - mountPath: /prometheus
      name: prometheus-monitoring-monitoring-kube-prometheus-db
    - mountPath: /etc/prom-certs/
      name: istio-certs
    - mountPath: /etc/prometheus/rules/prometheus-monitoring-monitoring-kube-prometheus-rulefiles-0
      name: prometheus-monitoring-monitoring-kube-prometheus-rulefiles-0
      readOnly: true
    - mountPath: /etc/prometheus/rules/prometheus-monitoring-monitoring-kube-prometheus-rulefiles-1
      name: prometheus-monitoring-monitoring-kube-prometheus-rulefiles-1
      readOnly: true
    - mountPath: /etc/prometheus/rules/prometheus-monitoring-monitoring-kube-prometheus-rulefiles-2
      name: prometheus-monitoring-monitoring-kube-prometheus-rulefiles-2
      readOnly: true
    - mountPath: /etc/prometheus/web_config/web-config.yaml
      name: web-config
      readOnly: true
      subPath: web-config.yaml
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-xj4hg
      readOnly: true
  - args:
    - --listen-address=:8080
    - --reload-url=http://127.0.0.1:9090/-/reload
    - --config-file=/etc/prometheus/config/prometheus.yaml.gz
    - --config-envsubst-file=/etc/prometheus/config_out/prometheus.env.yaml
    - --watched-dir=/etc/prometheus/rules/prometheus-monitoring-monitoring-kube-prometheus-rulefiles-0
    - --watched-dir=/etc/prometheus/rules/prometheus-monitoring-monitoring-kube-prometheus-rulefiles-1
    - --watched-dir=/etc/prometheus/rules/prometheus-monitoring-monitoring-kube-prometheus-rulefiles-2
    command:
    - /bin/prometheus-config-reloader
    env:
    - name: POD_NAME
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: metadata.name
    - name: SHARD
      value: "0"
    image: registry1.dso.mil/ironbank/opensource/prometheus-operator/prometheus-config-reloader:v0.88.0
    imagePullPolicy: IfNotPresent
    name: config-reloader
    ports:
    - containerPort: 8080
      name: reloader-web
      protocol: TCP
    resources: {}
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
      readOnlyRootFilesystem: true
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: FallbackToLogsOnError
    volumeMounts:
    - mountPath: /etc/prometheus/config
      name: config
    - mountPath: /etc/prometheus/config_out
      name: config-out
    - mountPath: /etc/prometheus/rules/prometheus-monitoring-monitoring-kube-prometheus-rulefiles-0
      name: prometheus-monitoring-monitoring-kube-prometheus-rulefiles-0
    - mountPath: /etc/prometheus/rules/prometheus-monitoring-monitoring-kube-prometheus-rulefiles-1
      name: prometheus-monitoring-monitoring-kube-prometheus-rulefiles-1
    - mountPath: /etc/prometheus/rules/prometheus-monitoring-monitoring-kube-prometheus-rulefiles-2
      name: prometheus-monitoring-monitoring-kube-prometheus-rulefiles-2
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-xj4hg
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  hostname: prometheus-monitoring-monitoring-kube-prometheus-0
  imagePullSecrets:
  - name: private-registry
  initContainers:
  - args:
    - istio-iptables
    - -p
    - "15001"
    - -z
    - "15006"
    - -u
    - "1337"
    - -m
    - REDIRECT
    - -i
    - ""
    - -x
    - ""
    - -b
    - '*'
    - -d
    - 15090,15021,15020
    - --log_output_level=default:info
    env:
    - name: OUTPUT_CERTS
      value: /etc/istio-output-certs
    image: registry1.dso.mil/ironbank/opensource/istio/proxyv2:1.29.0
    imagePullPolicy: IfNotPresent
    name: istio-init
    resources:
      limits:
        cpu: "2"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 128Mi
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        add:
        - NET_ADMIN
        - NET_RAW
        drop:
        - ALL
      privileged: false
      readOnlyRootFilesystem: false
      runAsGroup: 0
      runAsNonRoot: false
      runAsUser: 0
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-xj4hg
      readOnly: true
  - args:
    - proxy
    - sidecar
    - --domain
    - $(POD_NAMESPACE).svc.cluster.local
    - --proxyLogLevel=warning
    - --proxyComponentLogLevel=misc:error
    - --log_output_level=default:info
    env:
    - name: PILOT_CERT_PROVIDER
      value: istiod
    - name: CA_ADDR
      value: istiod.istio-system.svc:15012
    - name: POD_NAME
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: metadata.name
    - name: POD_NAMESPACE
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: metadata.namespace
    - name: INSTANCE_IP
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: status.podIP
    - name: SERVICE_ACCOUNT
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: spec.serviceAccountName
    - name: HOST_IP
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: status.hostIP
    - name: ISTIO_CPU_LIMIT
      valueFrom:
        resourceFieldRef:
          divisor: "1"
          resource: limits.cpu
    - name: PROXY_CONFIG
      value: |
        {"tracing":{"zipkin":{"address":"tempo-tempo.tempo.svc:9411"},"sampling":10},"proxyMetadata":{"OUTPUT_CERTS":"/etc/istio-output-certs"}}
    - name: ISTIO_META_POD_PORTS
      value: |-
        [
            {"name":"http-web","containerPort":9090,"protocol":"TCP"}
            ,{"name":"reloader-web","containerPort":8080,"protocol":"TCP"}
        ]
    - name: ISTIO_META_APP_CONTAINERS
      value: prometheus,config-reloader
    - name: GOMEMLIMIT
      valueFrom:
        resourceFieldRef:
          divisor: "1"
          resource: limits.memory
    - name: GOMAXPROCS
      valueFrom:
        resourceFieldRef:
          divisor: "1"
          resource: limits.cpu
    - name: ISTIO_META_CLUSTER_ID
      value: Kubernetes
    - name: ISTIO_META_NODE_NAME
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: spec.nodeName
    - name: ISTIO_META_INTERCEPTION_MODE
      value: REDIRECT
    - name: ISTIO_META_WORKLOAD_NAME
      value: prometheus-monitoring-monitoring-kube-prometheus
    - name: ISTIO_META_OWNER
      value: kubernetes://apis/apps/v1/namespaces/monitoring/statefulsets/prometheus-monitoring-monitoring-kube-prometheus
    - name: ISTIO_META_MESH_ID
      value: cluster.local
    - name: TRUST_DOMAIN
      value: cluster.local
    - name: OUTPUT_CERTS
      value: /etc/istio-output-certs
    - name: ISTIO_KUBE_APP_PROBERS
      value: '{"/app-health/prometheus/livez":{"httpGet":{"path":"/-/healthy","port":9090,"scheme":"HTTP"},"timeoutSeconds":3},"/app-health/prometheus/readyz":{"httpGet":{"path":"/-/ready","port":9090,"scheme":"HTTP"},"timeoutSeconds":3},"/app-health/prometheus/startupz":{"httpGet":{"path":"/-/ready","port":9090,"scheme":"HTTP"},"timeoutSeconds":3}}'
    image: registry1.dso.mil/ironbank/opensource/istio/proxyv2:1.29.0
    imagePullPolicy: IfNotPresent
    lifecycle:
      preStop:
        exec:
          command:
          - pilot-agent
          - request
          - --debug-port=15020
          - POST
          - drain
    name: istio-proxy
    ports:
    - containerPort: 15090
      name: http-envoy-prom
      protocol: TCP
    readinessProbe:
      failureThreshold: 4
      httpGet:
        path: /healthz/ready
        port: 15021
        scheme: HTTP
      periodSeconds: 15
      successThreshold: 1
      timeoutSeconds: 3
    resources:
      limits:
        cpu: "2"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 128Mi
    restartPolicy: Always
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
      privileged: false
      readOnlyRootFilesystem: true
      runAsGroup: 1337
      runAsNonRoot: true
      runAsUser: 1337
    startupProbe:
      failureThreshold: 600
      httpGet:
        path: /healthz/ready
        port: 15021
        scheme: HTTP
      periodSeconds: 1
      successThreshold: 1
      timeoutSeconds: 3
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/workload-spiffe-uds
      name: workload-socket
    - mountPath: /var/run/secrets/credential-uds
      name: credential-socket
    - mountPath: /var/run/secrets/workload-spiffe-credentials
      name: workload-certs
    - mountPath: /var/run/secrets/istio
      name: istiod-ca-cert
    - mountPath: /var/run/secrets/istio/crl
      name: istio-ca-crl
    - mountPath: /var/lib/istio/data
      name: istio-data
    - mountPath: /etc/istio/proxy
      name: istio-envoy
    - mountPath: /var/run/secrets/tokens
      name: istio-token
    - mountPath: /etc/istio/pod
      name: istio-podinfo
    - mountPath: /etc/istio-output-certs
      name: istio-certs
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-xj4hg
      readOnly: true
  - args:
    - --watch-interval=0
    - --listen-address=:8081
    - --config-file=/etc/prometheus/config/prometheus.yaml.gz
    - --config-envsubst-file=/etc/prometheus/config_out/prometheus.env.yaml
    - --watched-dir=/etc/prometheus/rules/prometheus-monitoring-monitoring-kube-prometheus-rulefiles-0
    - --watched-dir=/etc/prometheus/rules/prometheus-monitoring-monitoring-kube-prometheus-rulefiles-1
    - --watched-dir=/etc/prometheus/rules/prometheus-monitoring-monitoring-kube-prometheus-rulefiles-2
    command:
    - /bin/prometheus-config-reloader
    env:
    - name: POD_NAME
      valueFrom:
        fieldRef:
          apiVersion: v1
          fieldPath: metadata.name
    - name: SHARD
      value: "0"
    image: registry1.dso.mil/ironbank/opensource/prometheus-operator/prometheus-config-reloader:v0.88.0
    imagePullPolicy: IfNotPresent
    name: init-config-reloader
    ports:
    - containerPort: 8081
      name: reloader-init
      protocol: TCP
    resources: {}
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
      readOnlyRootFilesystem: true
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: FallbackToLogsOnError
    volumeMounts:
    - mountPath: /etc/prometheus/config
      name: config
    - mountPath: /etc/prometheus/config_out
      name: config-out
    - mountPath: /etc/prometheus/rules/prometheus-monitoring-monitoring-kube-prometheus-rulefiles-0
      name: prometheus-monitoring-monitoring-kube-prometheus-rulefiles-0
    - mountPath: /etc/prometheus/rules/prometheus-monitoring-monitoring-kube-prometheus-rulefiles-1
      name: prometheus-monitoring-monitoring-kube-prometheus-rulefiles-1
    - mountPath: /etc/prometheus/rules/prometheus-monitoring-monitoring-kube-prometheus-rulefiles-2
      name: prometheus-monitoring-monitoring-kube-prometheus-rulefiles-2
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-xj4hg
      readOnly: true
  nodeName: bb1-worker
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext:
    fsGroup: 2000
    runAsGroup: 2000
    runAsNonRoot: true
    runAsUser: 1000
    seccompProfile:
      type: RuntimeDefault
  serviceAccount: monitoring-monitoring-kube-prometheus
  serviceAccountName: monitoring-monitoring-kube-prometheus
  shareProcessNamespace: false
  subdomain: prometheus-operated
  terminationGracePeriodSeconds: 600
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - emptyDir: {}
    name: workload-socket
  - emptyDir: {}
    name: credential-socket
  - emptyDir: {}
    name: workload-certs
  - emptyDir:
      medium: Memory
    name: istio-envoy
  - emptyDir: {}
    name: istio-data
  - downwardAPI:
      defaultMode: 420
      items:
      - fieldRef:
          apiVersion: v1
          fieldPath: metadata.labels
        path: labels
      - fieldRef:
          apiVersion: v1
          fieldPath: metadata.annotations
        path: annotations
    name: istio-podinfo
  - name: istio-token
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          audience: istio-ca
          expirationSeconds: 43200
          path: istio-token
  - configMap:
      defaultMode: 420
      name: istio-ca-root-cert
    name: istiod-ca-cert
  - configMap:
      defaultMode: 420
      name: istio-ca-crl
      optional: true
    name: istio-ca-crl
  - name: config
    secret:
      defaultMode: 420
      secretName: prometheus-monitoring-monitoring-kube-prometheus
  - name: tls-assets
    projected:
      defaultMode: 420
      sources:
      - secret:
          name: prometheus-monitoring-monitoring-kube-prometheus-tls-assets-0
  - emptyDir:
      medium: Memory
    name: config-out
  - configMap:
      defaultMode: 420
      name: prometheus-monitoring-monitoring-kube-prometheus-rulefiles-0
      optional: true
    name: prometheus-monitoring-monitoring-kube-prometheus-rulefiles-0
  - configMap:
      defaultMode: 420
      name: prometheus-monitoring-monitoring-kube-prometheus-rulefiles-1
      optional: true
    name: prometheus-monitoring-monitoring-kube-prometheus-rulefiles-1
  - configMap:
      defaultMode: 420
      name: prometheus-monitoring-monitoring-kube-prometheus-rulefiles-2
      optional: true
    name: prometheus-monitoring-monitoring-kube-prometheus-rulefiles-2
  - name: web-config
    secret:
      defaultMode: 420
      secretName: prometheus-monitoring-monitoring-kube-prometheus-web-config
  - emptyDir: {}
    name: prometheus-monitoring-monitoring-kube-prometheus-db
  - emptyDir:
      medium: Memory
    name: istio-certs
  - name: kube-api-access-xj4hg
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
